css/ucb-person.css
.ucb-person-header {
  margin-bottom: 10px;
}

.ucb-person-name {
  margin-bottom: 0;
}

.ucb-person-pronouns {
  list-style: none;
  font-size: 1.1em;
  margin: 0;
  padding: 0;
}

.ucb-person-section {
  margin-bottom: 10px;
}

.ucb-person-main img {
  height: auto;
  border-radius: 2px;
}

ul.ucb-person-email-address,
ul.ucb-person-links,
ul.ucb-person-phone-numbers {
  overflow-wrap: break-word;
  list-style: none;
  padding: 0;
  color: #111;
  margin: 0;
}
.ucb-person-email-icon {
  display: inline-block;
}
a.ucb-person-social-link i.fa-solid,
a.ucb-person-social-link i.fa-brands {
  color: #111;
}

.ucb-person-contact-section {
  margin-top: 0.5em;
}

.ucb-person-contact p {
  margin: 5px;
  padding-top:10px;
  padding-bottom:10px;
}

.ucb-articles-by-person-block{
  display: block;
  margin-bottom: 20px;
}

.ucb-article-card-title{
  margin: 0;
  margin-bottom: 10px;
  margin-top: 10px;
}

@media only screen and (max-width: 767px) {
  .ucb-person-main {
    display: flex;
    flex-direction: row;
  }
  .ucb-person-main .ucb-person-img {
    padding-right: 10px;
  }
}

.ucb-person-img .media-image-caption {
  text-align: center;
}

.ucb-person-section-header {
  display: block;
  font-weight: bold;
}

.ucb-person-section.ucb-person-links,
.ucb-person-section.ucb-person-address,
.ucb-person-section.ucb-person-office-hours {
  margin-top: 20px;
}

ul.ucb-person-title li:not(:first-child):before,
ul.ucb-person-department li:not(:first-child):before {
  font-weight: 900;
  content: '\2022';
  vertical-align: middle;
  padding-left: .0625em;
  padding-right: .25em;
}

.ucb-person-title li,
.ucb-person-department li {
  display: inline-block;
}

.ucb-person-title,
.ucb-person-department {
  padding-left: 0;
  margin-bottom: 0;
}

.ucb-person-img img {
  padding-bottom: 0;
}

.ucb-person-img .media-image-caption {
  display: block;
  padding-top: .2em;
}

.ucb-person-img {
  width: fit-content;
}

.primaryLinkIcon {
  color: #111;
}

.ucb-article-card-title-only{
  border-bottom: 1px solid rgba(128, 128, 128, 0.333);
}

.ucb-article-read-more-container{
  text-align: right;
  padding: 10px 0px;
}

.ucb-article-read-more{
  font-size: 85%;
}

